<resources>
    <string name="app_name">许什么心愿</string>
    <string name="search">搜索...</string>
    <string name="workDir">/sdcard/iflytek/</string>
    <string name="gps_panel_text">Choose location</string>
    <string name="gps_country">Country</string>
    <string name="gps_province">Province</string>
    <string name="gps_city">City</string>
    <string name="fde_desc">FDE(推荐使用)</string>
    <string name="app_open_drop_target_label">"打开"</string>
    <string name="app_open_type">"打开方式"</string>
    <string name="remove_drop_target">"移除"</string>
    <string name="copy_drop_target">"复制"</string>
    <string name="cut_drop_target">"剪切"</string>
    <string name="delete_drop_target">"删除"</string>
    <string name="rename_drop_target">"重命名"</string>
    <string name="desktop_icon_rearray">"自动排列"</string>
    <string name="desktop_new_document">"新建文档"</string>
    <string name="desktop_new_directory">"新建文件夹"</string>
    <string name="desktop_new">"新建"</string>
    <string name="desktop_new_paste">"粘贴"</string>
    <string name="desktop_tips">"提示"</string>
    <string name="desktop_delete_tips">"是否删除？"</string>
    <string name="desktop_delete">"删除"</string>
    <string name="desktop_cancel">"取消"</string>
    <string name="desktop_ok">"确定"</string>
    <string name="desktop_rename">"重命名"</string>
    <string name="change_wallpaper">"更换壁纸"</string>
    <string name="display_properties">"显示属性"</string>
    <string name="display_settings">"显示设置"</string>
    <string name="system_theme">"系统主题"</string>
    <string name="view_type">"视图类型"</string>
    <string name="sort">"排序方式"</string>
    <string name="open_the_terminal">"打开终端"</string>
    <string name="theme_dark">"深色"</string>
    <string name="theme_light">"浅色"</string>
    <string name="sort_by_name">"名称"</string>
    <string name="sort_by_type">"类型"</string>
    <string name="refresh">"刷新"</string>
    <string name="fde_compatible_set">兼容性设置</string>
    <string name="fde_compatible_summary">应用兼容性设置</string>
    <string name="fde_input_hint">请输入值</string>
    <string name="fde_input_appname_hint">请输入应用名称</string>
    <string name="fde_app_name_title">应用名称</string>
    <string name="fde_data_value">值</string>
    <string name="fde_switch">请选择</string>
    <string name="fde_tips">提示</string>
    <string name="fde_clean_tips">是否清空所有配置?</string>
    <string name="fde_reset_tips">是否恢复默认配置?</string>
    <string name="fde_sync_config_from_gitee">是否从服务器同步最新配置?</string>
    <string name="set_gps_info">设置GPS信息</string>
    <string name="set_success">设置成功</string>
    <string name="fde_country">国家</string>
    <string name="fde_province">省份</string>
    <string name="fde_city">城市</string>
    <string-array name="theme_options">
        <item>深色模式</item>
        <item>浅色模式</item>
    </string-array>
    <string-array name="sort_options">
        <item>名称</item>
        <item>类型</item>
        <item>时间</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="spinner_items">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>
    <string-array name="spinner_ip">
        <item>DHCP</item>
        <item>Manual Input</item>
    </string-array>
    <string name="fde_btn_cancel">Cancel</string>
    <string name="fde_btn_confirm">Confirm</string>
    <string name="fde_forget">Forget</string>
    <string name="configurable_interfaces">Configurable interfaces</string>
    <string name="ip_settings">IP Settings</string>
    <string name="ip_address">IP Address</string>
    <string name="default_gateway">default gateway</string>
    <string name="subnet_mask">Subnet Mask</string>
    <string name="preferred_dns">Preferred DNS</string>
    <string name="alternative_dns">Alternative DNS</string>
    <string name="subtype_pinyin">拼音输入</string>
    <string name="subtype_english">英文输入</string>
    <string name="subtype_number">数字符号</string>
    <string name="ime_name">我的输入法</string>
    <string name="settings_title">输入法设置</string>
    <string name="enable_ime_title">启用输入法</string>
    <string name="go_to_enable">前往系统设置启用</string>
    <string name="enable_ime_hint">请在系统输入法设置中启用本输入法</string>
    <string name="keyboard_settings">键盘设置</string>
    <string name="vibration_feedback">按键振动反馈</string>
    <string name="key_sound">按键音效</string>
    <string name="keyboard_height">键盘高度</string>
    <string name="input_settings">输入设置</string>
    <string name="auto_correct">自动纠错</string>
    <string name="candidates_count">候选词数量</string>
    <string name="manage_user_dictionary">管理用户词库</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="agc_02CAC09AC82718922B7A47188A3EF7CB928CA8D0EBE456FE3A763223DC25E33E">001F17E915672DA391E6155144AD2DDD18FD8DC61BB9F8A6C551647A8E6FE9CE314F28324140B5F9594D07D3D8E00E67F24BA977DAE63676F181DFD2C78630ACC9</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">00E75D4CFEB13AF443D2521EE33630DA4B71D7AABF366DDCA2AD92583FB91F8645D77EADAC74C31DDB944C8E025197013591ADE17885B9A902ECAC3EEF38D6A296943BB628905F011025C7D7796E8CD109</string>
    <string name="agc_0692DAD5D21427E7CCE627E8DC1ED71FDB307EBDC4DFB3A554BC60FCCE38E034">0072DA7CC6B3F37BCB84334771C3D61162B87301E37C8B28F88C5E924C0213B030DC59C199E22EFCE7D837A70E22AD3773C030B1BAAECAB3EFA4C8036D2A0FF40A</string>
    <string name="agc_0DC3A56C1AC03D404A409264B0AED075A38F9EB082F5057704EA33D4B5B9B9C9">00869ABD29D530B32FDE814E53487EF18D6183A2988C47C3583689FDBD2DD7A46161A6B9B4A456BECB8277ED3490B474A79EAA207B49050E2D3B9163589B8EB560287D85C81461B9BAA2269CF4977FA68E51338A13BACDD2E0D132C2B856CA5D46</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">00550F1788B78CAF6224BB67087BAA2F077BB3AB7447398FD0396D085EA3F63E8816206C320D1FF799C25E76174F2798C11496F30470934CF49D6C48B4A7D395B48899B0C8CE98A1776ADD910595DCF9AFD81FF953A3B19A661903C9BB5FB4D434</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="input_you_phone_hint">请输入你的手机号码</string>
    <string name="str_accept_protocol">我已阅读并同意《讯飞易听说用户注册协议》,《讯飞E听说中学隐私政策》,《讯飞E听说中学儿童隐私保护政策》</string>
    <string name="str_btn_comfirm">确定</string>
    <string name="str_btn_register">注册</string>
    <string name="str_ecard_login">E卡号码登录</string>
    <string name="str_forget_pwd_tip">忘记密码</string>
    <string name="str_how_login">如何登录</string>
    <string name="str_login_education">教育账号登录</string>
    <string name="str_login_tag">登录</string>
    <string name="str_tips_input_account_pwd">本E卡已绑定手机号%s，请输入当时设置的账号密码进行登录</string>
    <string name="str_tourist">随便看看</string>
    <string name="str_use_auth_login">本机一键登录</string>
    <string name="str_welcome_ets">欢迎使用E听说中学</string>
    <string name="str_welcome_login">登录账号</string>
</resources>