<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_common">

    <View
        android:id="@+id/iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_back"
        android:layout_marginStart="40dp"
        android:layout_marginTop="41dp"
        android:text="@string/str_welcome_ets"
        android:textColor="@color/color_c1"
        android:textSize="24sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="180dp"
        android:layout_height="32dp"
        android:layout_below="@+id/iv_back"
        android:layout_marginStart="30dp"
        android:layout_marginTop="96dp">

        <TextView
            android:id="@+id/tv_login_tab"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@drawable/bg_change_mobile_tab"
            android:gravity="top|center_horizontal"
            android:text="@string/str_welcome_login"
            android:textColor="@color/color_262626"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_register_tab"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="top|center_horizontal"
            android:text="@string/str_btn_register"
            android:textColor="@color/color_262626"
            android:textSize="16sp" />
    </FrameLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/iv_back"
        android:layout_marginTop="128dp" />
</RelativeLayout>
