<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2018 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
     dialog_fde_update_compatible
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="332dp"
    android:layout_height="192dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="28dp"
        android:text="应用窗口最小宽度"
        android:textColor="@color/app_black_light"
        android:textSize="@dimen/fde_medium_text" />


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="288dp"
        android:layout_marginHorizontal="24dp"
        android:layout_height="36dp">


        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0d000000"
            android:completionHint=""
            android:paddingHorizontal="8dp"
            android:hint="@string/fde_input_hint"
            android:textSize="@dimen/fde_medium_text" />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="32dp">

        <TextView
            android:id="@+id/txtCancel"
            android:layout_width="84dp"
            android:layout_height="32dp"
            android:layout_marginRight="12dp"
            android:layout_toLeftOf="@id/txtConfirm"
            android:background="#0f000000"
            android:gravity="center"
            android:textSize="@dimen/fde_light_text"
            android:text="@string/fde_btn_cancel"
            android:textColor="#d9000000" />


        <Button
            android:id="@+id/txtConfirm"
            android:layout_width="84dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="24dp"
            android:background="#318BF3"
            android:gravity="center"
            android:textSize="@dimen/fde_light_text"
            android:text="@string/fde_btn_confirm"
            android:textColor="@color/white" />

    </RelativeLayout>


</LinearLayout>